<resources>
    <string name="app_name">Pace Calculator</string>
    <string name="race">Race:</string>
    <string name="distance">Distance</string>
    <string name="time">Time:</string>
    <string name="pace">Pace:</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="split">Split</string>
    <string name="splits">Splits:</string>
    <string name="calculate">Calculate</string>
    <string name="toggle_m">Miles</string>
    <string name="toggle_k">Km</string>
    <string name="reset_values">Reset</string>

    <string name="distance_prompt">Choose a Race</string>
    <string-array name="distances">
        <item></item>
        <item>3K</item>
        <item>5K</item>
        <item>8K</item>
        <item>10K</item>
        <item>Half Marathon</item>
        <item>Marathon</item>
    </string-array>
</resources>
